update ktlint action #DC-3

--- a/.github/workflows/ktlint.yml
+++ b/.github/workflows/ktlint.yml
@@ -1,16 +1,24 @@
-name: Lint check
+name: ktlint
 
-on: [pull_request]
+on:
+  pull_request:
+    paths:
+      - .github/workflows/ktlint.yml
+      - 'src/**/*.kt'
+      - '**.kts'
 
 jobs:
   ktlint:
-    name: Check Code Quality
     runs-on: ubuntu-latest
-
     steps:
-      - name: Clone PR
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+      - run: |
+          curl -sSLO https://github.com/pinterest/ktlint/releases/download/0.47.1/ktlint && chmod a+x ktlint && sudo mv ktlint /usr/local/bin/
+      - name: run ktlint
+        run: |
+          ktlint --reporter=checkstyle,output=build/ktlint-report.xml
+        continue-on-error: true
+      - uses: yutailang0119/action-ktlint@v3
         with:
-          fetch-depth: 1
-      - name: Run Ktlint
-        uses: lucasnlm/ktlint-action@master
+          report-path: build/*.xml # Support glob patterns by https://www.npmjs.com/package/@actions/glob
+        continue-on-error: false # If annotations contain error of severity, action-ktlint exit 1.
