--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,10 @@ plugins {
     id 'com.android.application' version '7.2.1' apply false
     id 'com.android.library' version '7.2.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.5.31' apply false
+    id 'org.jlleitschuh.gradle.ktlint' version '11.0.0'
+
 }
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
